--- a/Restaurantsreview/src/main/resources/templates/login.html
+++ b/Restaurantsreview/src/main/resources/templates/login.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 <head>
-<title>FreshVotes Login</title>
+<title>RestaurantsReview Login</title>
 </head>
+
+<script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+  crossorigin="anonymous"></script>
+  
+  <script type="text/javascript">
+  
+  	$(function (){
+  		
+  		$("")
+  		
+  	});	
+  	
+  
+  </script>
+
 <body>
   <form action="" method="post">
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
@@ -29,6 +46,7 @@
       </p>
       <div>
         <button type="submit" class="btn">Log in</button>
+         <button type="button" class="btn" id="createAccount">Create Account</button>
       </div>
     </fieldset>
   </form>
