Registartion page part-2

--- a/Restaurantsreview/src/main/resources/templates/login.html
+++ b/Restaurantsreview/src/main/resources/templates/login.html
@@ -13,7 +13,10 @@
   
   	$(function (){
   		
-  		$("")
+  		$("#createAccount").click(function (){
+  			
+  			window.location.href="/register";
+  		});
   		
   	});	
   	
