--- a/Restaurantsreview/src/main/resources/templates/register.html
+++ b/Restaurantsreview/src/main/resources/templates/register.html
@@ -5,7 +5,22 @@
 </head>
 <body>
 
-<h2>Register for an Account</h2>
+	<h2>Register for an Account</h2>
+
+<form action="" method="post">
+
+ <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+
+First Name :<input type="text" th:field="${user.firstName}"/><br/>
+Last  Name :<input type="text" th:field="${user.lastName}"/><br/>
+User  Name :<input type="text" th:field="${user.userName}"/><br/>
+Password :<input type="password" th:field="${user.password}"/><br/>
+Confirm Password :<input type="password" id="confirmPassword"/><br/><br/>
+<button type="submit">Create Account</button>
+
+
+</form>
+
 
 </body>
 </html>
