--- a/Restaurantsreview/src/main/resources/templates/login.html
+++ b/Restaurantsreview/src/main/resources/templates/login.html
@@ -2,56 +2,133 @@
 <html xmlns:th="http://thymeleaf.org">
 <head>
 <title>RestaurantsReview Login</title>
+
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+	crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+	$(function() {
+
+		$("#createAccount").click(function() {
+
+			window.location.href = "/register";
+		});
+
+	});
+</script>
+
+<style type="text/css">
+</style>
 </head>
 
-<script
-  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-  crossorigin="anonymous"></script>
-  
-  <script type="text/javascript">
-  
-  	$(function (){
-  		
-  		$("#createAccount").click(function (){
-  			
-  			window.location.href="/register";
-  		});
-  		
-  	});	
-  	
-  
-  </script>
-
 <body>
-  <form action="" method="post">
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-    <fieldset>
-      <legend>Please Login</legend>
-      <!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
-      <div th:if="${param.error != null}">
-        Failed to login.
-        <div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
-                Reason: <span th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}"></span>
-        </div>
-      </div>
-      <!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
-      <div th:if="${param.logout != null}">
-        You have been logged out.
-      </div>
-      <p>
-        <label for="username">Username</label> <input type="text"
-          id="username" name="username" />
-      </p>
-      <p>
-        <label for="password">Password</label> <input type="password"
-          id="password" name="password" />
-      </p>
-      <div>
-        <button type="submit" class="btn">Log in</button>
-         <button type="button" class="btn" id="createAccount">Create Account</button>
-      </div>
-    </fieldset>
-  </form>
+	<div class="container">
+		<!-- 		<div class="row"> -->
+		<!-- 			<div class="col-2" style="background-color: gray; height: 50px"> -->
+		<!-- 			</div> -->
+		<!-- 			<div class="col-4" style="background-color: black; height: 50px"> -->
+		<!-- 			</div> -->
+		<!-- 			<div class="col-6" style="background-color: green; height: 50px"> -->
+		<!-- 			</div> -->
+		<!-- 		</div> -->
+
+		<div class="card" style="margin-top: 1.5em;">
+
+			<div class="card-header">
+				<h2>Please Login</h2>
+			</div>
+
+			<div class="card-body">
+				<div class="row">
+
+
+
+					<!--		<div class="col-6"> -->
+					<form action="" method="post">
+						<input type="hidden" th:name="${_csrf.parameterName}"
+							th:value="${_csrf.token}" />
+
+
+						<!-- use param.error assuming FormLoginConfigurer#failureUrl contains the query parameter error -->
+						<div th:if="${param.error != null}" class="alert alert-danger"
+							role="alert">
+							Failed to login.
+							<div th:if="${SPRING_SECURITY_LAST_EXCEPTION != null}">
+								Reason: <span
+									th:text="${SPRING_SECURITY_LAST_EXCEPTION.message}"></span>
+							</div>
+						</div>
+						<!-- the configured LogoutConfigurer#logoutSuccessUrl is /login?logout and contains the query param logout -->
+						<div th:if="${param.logout != null}">You have been logged
+							out.</div>
+
+						<div class="form-group row">
+
+
+							<label for="username"
+								class="col-12 col-sm-3 col-md-2 col-form-label">Username</label>
+
+							<div class="col-12 col-sm-9 col-md-10">
+								<input type="text" style="padding: 5px" class="form-control"
+									id="username" name="username" />
+							</div>
+
+
+
+						</div>
+
+						<div class="form-group row" style="margin-top: 0.5em;">
+
+
+							<label for="password"
+								class="col-12 col-sm-3 col-md-2 col-form-label">Password</label>
+
+							<div class="col-12 col-sm-9 col-md-10">
+								<input type="password" style="padding: 5px" class="form-control"
+									id="password" name="password" />
+							</div>
+
+
+
+						</div>
+
+						<br />
+						<div class="row">
+							<div class="col-6">
+								<button type="submit" style="padding: 5px"
+									class="btn btn-primary">Log in</button>
+							</div>
+
+							<div class="col-6">
+								<button type="button" style="padding: 5px"
+									class="btn btn-info  float-right" id="createAccount">Create
+									Account</button>
+							</div>
+
+						</div>
+
+					</form>
+
+
+					<!--			</div>  -->
+				</div>
+
+			</div>
+
+		</div>
+
+
+
+
+
+	</div>
 </body>
 </html>
+
+
