--- a/Restaurantsreview/src/main/resources/templates/login.html
+++ b/Restaurantsreview/src/main/resources/templates/login.html
@@ -29,14 +29,7 @@
 
 <body>
 	<div class="container">
-		<!-- 		<div class="row"> -->
-		<!-- 			<div class="col-2" style="background-color: gray; height: 50px"> -->
-		<!-- 			</div> -->
-		<!-- 			<div class="col-4" style="background-color: black; height: 50px"> -->
-		<!-- 			</div> -->
-		<!-- 			<div class="col-6" style="background-color: green; height: 50px"> -->
-		<!-- 			</div> -->
-		<!-- 		</div> -->
+
 
 		<div class="card" style="margin-top: 1.5em;">
 
@@ -102,12 +95,12 @@
 						<div class="row">
 							<div class="col-6">
 								<button type="submit" style="padding: 5px"
-									class="btn btn-primary">Log in</button>
+									class="btn btn-lg btn-primary">Log in</button>
 							</div>
 
-							<div class="col-6">
+							<div class="col-6" align="right">
 								<button type="button" style="padding: 5px"
-									class="btn btn-info  float-right" id="createAccount">Create
+									class="btn btn-lg btn-info  float-right" id="createAccount">Create
 									Account</button>
 							</div>
 
