--- a/Restaurantsreview/src/main/resources/templates/register.html
+++ b/Restaurantsreview/src/main/resources/templates/register.html
@@ -2,25 +2,142 @@
 <html xmlns:th="http://thymeleaf.org">
 <head>
 <title>RestaurantsReview Login</title>
+
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+	crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+	$(function() {
+
+		$("#back").click(function() {
+
+			window.location.href = "/login";
+		});
+
+	});
+</script>
+
+
+
 </head>
 <body>
 
-	<h2>Register for an Account</h2>
-
-<form action="" method="post">
-
- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-
-First Name :<input type="text" th:field="${user.firstName}"/><br/>
-Last  Name :<input type="text" th:field="${user.lastName}"/><br/>
-User  Name :<input type="text" th:field="${user.userName}"/><br/>
-Password :<input type="password" th:field="${user.password}"/><br/>
-Confirm Password :<input type="password" id="confirmPassword"/><br/><br/>
-<button type="submit">Create Account</button>
+	<div class="container">
 
 
-</form>
+		<div class="card" style="margin-top: 1.5em;">
+
+			<div class="card-header">
+				<h2>Register For An Account</h2>
+			</div>
+
+			<div class="card-body">
+
+				<form action="" method="post">
+
+					<input type="hidden" th:name="${_csrf.parameterName}"
+						th:value="${_csrf.token}" />
+
+					<div class="form-group row">
+						<lable for="firstName" class=" col-md-2 col-form-label">First
+						Name:</lable>
+
+						<div class="col-md-10">
+							<input type="text" style="padding: 5px" class="form-control"
+								th:field="${user.firstName}" />
+						</div>
 
 
+					</div>
+
+
+					<div class="form-group row">
+						<lable for="lastName" class=" col-md-2 col-form-label">Last
+						Name :</lable>
+
+						<div class="col-md-10">
+
+							<input type="text" style="padding: 5px" class="form-control"
+								th:field="${user.lastName}" />
+
+						</div>
+
+
+					</div>
+
+
+					<div class="form-group row">
+						<lable for="userName" class=" col-md-2 col-form-label">User
+						Name :</lable>
+
+						<div class="col-md-10">
+
+							<input type="text" style="padding: 5px" class="form-control"
+								th:field="${user.userName}" />
+
+						</div>
+
+
+					</div>
+
+
+					<div class="form-group row">
+						<lable for="password" class=" col-md-2 col-form-label">Password
+						:</lable>
+
+						<div class="col-md-10">
+
+							<input type="password" style="padding: 5px" class="form-control"
+								th:field="${user.password}" />
+
+						</div>
+
+					</div>
+
+
+					<div class="form-group row">
+						<lable for="confirmPassword" class=" col-md-2 col-form-label">Confirm
+						Password :</lable>
+
+						<div class="col-10">
+
+							<input type="password" style="padding: 5px" class="form-control"
+								id="confirmPassword" />
+
+						</div>
+
+					</div>
+					<br />
+					<div class="row">
+						<div class="col-6">
+							<button type="button" style="padding: 10px"
+								class="btn btn-lg btn-info " id="back">Back</button>
+
+						</div>
+						<div class="col-6" align="right">
+							<button type="submit" style="padding: 10px"
+								class="btn btn-lg btn-primary ">Create Account</button>
+						</div>
+					</div>
+
+
+
+
+				</form>
+
+			</div>
+		</div>
+
+
+
+	</div>
 </body>
 </html>
