--- a/Restaurantsreview/src/main/resources/templates/dashboard.html
+++ b/Restaurantsreview/src/main/resources/templates/dashboard.html
@@ -1,22 +1,261 @@
 <!DOCTYPE html>
-
 <html xmlns:th="http://thymeleaf.org">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Restaurant Review</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y="
+      crossorigin="anonymous"
+    />
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
+      integrity="sha256-x8PYmLKD83R9T/sYmJn1j3is/chhJdySyhet/JuHnfY="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-mattBlackLight fixed-top"
+    >
+      <button class="navbar-toggler sideMenuToggler" type="button">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<h5>WELCOME TO DASHBOARD</h5>
+      <a class="navbar-brand" href="#">Restaurant Review</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-</head>
-
-<body>
-
-	<form action="/logout" method="post">
-	 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-		<button type="submit">Logout</button>
-
-	</form>
-
-
-</body>
-
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle p-0"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <i class="material-icons icon">
+                person
+              </i>
+              <span class="text">Account</span>
+            </a>
+            <div
+              class="dropdown-menu dropdown-menu-right"
+              aria-labelledby="navbarDropdown"
+            >
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="wrapper d-flex">
+      <div class="sideMenu bg-mattBlackLight">
+        <div class="sidebar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2">
+                <i class="material-icons icon">
+                  dashboard
+                </i>
+                <span class="text">Dashboard</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2">
+                <i class="material-icons icon">
+                  person
+                </i>
+                <span class="text">User Profile</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2">
+                <i class="material-icons icon"> insert_chart </i
+                ><span class="text">Charts</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2">
+                <i class="material-icons icon">
+                  settings
+                </i>
+                <span class="text">Settings</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2">
+                <i class="material-icons icon">
+                  pages
+                </i>
+                <span class="text">Pages</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2">
+                <i class="material-icons icon">
+                  computer
+                </i>
+                <span class="text">Demo</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link px-2 sideMenuToggler">
+                <i class="material-icons icon expandView ">
+                  view_list
+                </i>
+                <span class="text">Resize</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="content">
+        <main>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-4 my-3">
+                <div class="bg-mattBlackLight px-3 py-3">
+                  <h4 class="mb-2">Active Users </h4>
+                  <div class="progress" style="height: 16px;">
+                    <div
+                      class="progress-bar bg-warning text-mattBlackDark"
+                      role="progressbar"
+                      style="width: 25%;"
+                      aria-valuenow="25"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      25
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 my-3">
+                <div class="bg-mattBlackLight px-3 py-3">
+                  <h4 class="mb-2">Registered Restaurant Count</h4>
+                  <div class="progress" style="height: 16px;">
+                    <div
+                      class="progress-bar bg-info text-mattBlackDark"
+                      role="progressbar"
+                      style="width: 50%;"
+                      aria-valuenow="25"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      50
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 my-3">
+                <div class="bg-mattBlackLight p-3">
+                  <h4 class="mb-2">Completed</h4>
+                  <div class="progress" style="height: 16px;">
+                    <div
+                      class="progress-bar bg-success"
+                      role="progressbar"
+                      style="width: 80%;"
+                      aria-valuenow="25"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    >
+                      80
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="bg-mattBlackLight my-2 p-3">
+				Restaurant Review's review and photo moderators are required to always act in favor of keeping Restaurant Review a neutral platform. 
+				They are required to use their best judgement in implementing moderation guidelines and are prohibited from giving preferential treatment to restaurants. 
+				Deleting any authentic review from a restaurant page is in violation of our policies. Similarly, keeping reviews, which are proven to be unauthentic, is in violation of our policies.
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="bg-mattBlackLight my-2 p-3">
+				Restaurant Review's review and photo moderators are required to always act in favor of keeping Restaurant Review a neutral platform. 
+				They are required to use their best judgement in implementing moderation guidelines and are prohibited from giving preferential treatment to restaurants. 
+				Deleting any authentic review from a restaurant page is in violation of our policies. Similarly, keeping reviews, which are proven to be unauthentic, is in violation of our policies.
+                </div>
+              </div>
+            </div>
+          </div>
+        </main>
+      </div>
+    </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+      integrity="sha256-OUFW7hFO0/r5aEGTQOz9F/aXQOt+TwqI1Z4fbVvww04="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.8/jquery.slimscroll.min.js"
+      integrity="sha256-qE/6vdSYzQu9lgosKxhFplETvWvqAAlmAuR+yPh/0SI="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
+
+
+
+
+	<!-- 	<form action="/logout" method="post"> -->
+	<!-- 		<input type="hidden" th:name="${_csrf.parameterName}" -->
+	<!-- 			th:value="${_csrf.token}" /> -->
+
+	<!-- 		<div class="row"> -->
+	<!-- 			<div class="col-6"> -->
+	<!-- 				<button type="submit" style="padding: 10px" -->
+	<!-- 					class="btn btn-lg btn-info " id="Logout">Logout</button> -->
+
+	<!-- 			</div> -->
+
+
+
+	<!-- 		</div> -->
+	<!-- 		<div class="col-6" align="right"> -->
+	<!-- 			<button type="button" style="padding: 10px" -->
+	<!-- 				class="btn btn-lg btn-primary " id="addRestaurant">Add -->
+	<!-- 				Restaurant</button> -->
+	<!-- 		</div> -->
+	<!-- 		</div> -->
+
+	<!-- 	</form> -->
+
+
