--- a/Restaurantsreview/src/main/resources/templates/register.html
+++ b/Restaurantsreview/src/main/resources/templates/register.html
@@ -35,8 +35,7 @@
 
 		<div class="card" style="margin-top: 1.5em;">
 
-			<div class="card-header">
-				<h2>Register For An Account</h2>
+			<div class="card-header"><h2>Register For An Account</h2>
 			</div>
 
 			<div class="card-body">
