--- a/Restaurantsreview/src/main/resources/templates/restaurantRegistration.html
+++ b/Restaurantsreview/src/main/resources/templates/restaurantRegistration.html
@@ -2,22 +2,112 @@
 <html xmlns:th="http://thymeleaf.org">
 <head>
 <title>Restaurants Registration</title>
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+	crossorigin="anonymous"></script>
+
+<script type="text/javascript">
+	$(function() {
+
+		$("#back").click(function() {
+
+			window.location.href = "/dashboard";
+		});
+
+	});
+</script>
+
+
 
 </head>
-<body><h2>Register a Restaurant</h2>
+<body>
 
 
-<form action="" method="post">
-<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
- Name : <input type="text" th:field="${restaurantList.title}"/></br>
- Address :<input type="text" th:field="${restaurantList.description}"/></br>
- Status: <input type="text" th:field="${restaurantList.status}"/></br>
 
-</br>
-<button type="submit">Create a Restaurant</button>
+	<div class="container">
 
 
-</form>
+		<div class="card" style="margin-top: 1.5em;">
+
+			<div class="card-header">
+				<h2>Register For a Restaurant</h2>
+			</div>
+
+			<div class="card-body">
+
+
+				<form action="" method="post">
+					<input type="hidden" th:name="${_csrf.parameterName}"
+						th:value="${_csrf.token}" />
+
+					<div class="form-group row">
+						<lable for="title" class=" col-md-2 col-form-label">Restaurant
+						Name:</lable>
+
+						<div class="col-md-10">
+							<input type="text" style="padding: 5px" class="form-control"
+								th:field="${restaurantList.title}" />
+						</div>
+
+
+						<div class="form-group row">
+							<lable for="description" class=" col-md-2 col-form-label">Restaurant
+							Address:</lable>
+
+							<div class="col-md-10">
+								<input type="text" style="padding: 5px" class="form-control"
+									th:field="${restaurantList.description}" />
+							</div>
+
+
+
+							<div class="form-group row">
+								<lable for="status" class=" col-md-2 col-form-label">Restaurant
+								Status:</lable>
+
+								<div class="col-md-10">
+									<input type="text" style="padding: 5px" class="form-control"
+										th:field="${restaurantList.status}" />
+								</div>
+
+
+
+
+								</br>
+
+
+								<div class="row">
+									<div class="col-6">
+										<button type="button" style="padding: 10px"
+											class="btn btn-lg btn-info " id="back">Back</button>
+
+									</div>
+									<div class="col-6" align="right">
+										<button type="submit" style="padding: 10px"
+											class="btn btn-lg btn-primary ">Create a Restaurant</button>
+									</div>
+								</div>
+				</form>
+
+
+
+			</div>
+
+		</div>
+
+	</div>
+
+
+
+
+
+
 
 
 </body>
