--- a/Restaurantsreview/src/main/resources/templates/restaurantInfo.html
+++ b/Restaurantsreview/src/main/resources/templates/restaurantInfo.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<title>Moghul</title>
+<title></title>
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css"
 	integrity="sha256-L/W5Wfqfa0sdBNIKN9cG6QA5F2qx4qICmU2VgLruv9Y="
@@ -20,12 +20,13 @@
 	crossorigin="anonymous" />
 <link rel="stylesheet" href="css/star-rating-css.css" />
 
-
-
-
 </head>
 <body>
 
+	<h1>
+		Welcome to - <span th:text="${restaurantList.title}"></span>
+		Restaurant
+	</h1>
 	<div class="container">
 
 
@@ -36,7 +37,6 @@
 			</div>
 
 			<div class="card-body">
-
 				<form action="" method="post">
 					<div class="form-group">
 						<input type="hidden" th:name="${_csrf.parameterName}"
@@ -46,8 +46,7 @@
 						<div>
 
 							<label for="text-area">Add A Review:</label>
-							<textarea id="text-area" name="text-area" rows="" cols=""
-								th:field="${review.reviewText}"></textarea>
+							<textarea id="text-area" name="text-area" rows="" cols=""></textarea>
 
 						</div>
 					</div>
@@ -56,51 +55,11 @@
 						<button type="submit" style="padding: 10px"
 							class="btn btn-lg btn-primary ">Post</button>
 					</div>
-					
 				</form>
+
 			</div>
-
-			
-
 		</div>
 	</div>
 
-
-
-
-
-
-
-
-
-	<div class="container">
-		<div class="rating-wrap">
-			<h2>Star Rating</h2>
-			<div class="center">
-				<fieldset class="rating">
-					<input type="radio" id="star5" name="rating" value="5" /><label
-						for="star5" class="full" title="Awesome"></label> <input
-						type="radio" id="star4.5" name="rating" value="4.5" /><label
-						for="star4.5" class="half"></label> <input type="radio" id="star4"
-						name="rating" value="4" /><label for="star4" class="full"></label>
-					<input type="radio" id="star3.5" name="rating" value="3.5" /><label
-						for="star3.5" class="half"></label> <input type="radio" id="star3"
-						name="rating" value="3" /><label for="star3" class="full"></label>
-					<input type="radio" id="star2.5" name="rating" value="2.5" /><label
-						for="star2.5" class="half"></label> <input type="radio" id="star2"
-						name="rating" value="2" /><label for="star2" class="full"></label>
-					<input type="radio" id="star1.5" name="rating" value="1.5" /><label
-						for="star1.5" class="half"></label> <input type="radio" id="star1"
-						name="rating" value="1" /><label for="star1" class="full"></label>
-					<input type="radio" id="star0.5" name="rating" value="0.5" /><label
-						for="star0.5" class="half"></label>
-				</fieldset>
-			</div>
-
-			<h4 id="rating-value"></h4>
-		</div>
-	</div>
-
-	<script src="js/star-ratings.js"></script>
 </body>
 </html>
