--- a/Restaurantsreview/src/main/resources/templates/restaurantListDisplay.html
+++ b/Restaurantsreview/src/main/resources/templates/restaurantListDisplay.html
@@ -68,7 +68,8 @@
 
 					<tr th:each="restaurantList : ${restaurantList}">
 						<td><span th:text="${restaurantList.id}"></span></td>
-						<td><span th:text="${restaurantList.title}"></span></td>
+						@{/userLogin/{userId}(userId=${user.userId})}
+						<td><a th:href="@{'restaurantInfo/' + ${restaurantList.id}}"><span th:text="${restaurantList.title}"></span></a></td>
 						<td><span th:text="${restaurantList.description}"></span></td>
 						<td><span th:text="${restaurantList.status}"></span></td>
 						<a href="http://localhost:8080/${restaurantList.title}" ></a>
