--- a/Restaurantsreview/src/main/resources/templates/restaurantInfo.html
+++ b/Restaurantsreview/src/main/resources/templates/restaurantInfo.html
@@ -18,6 +18,20 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css"
 	integrity="sha256-x8PYmLKD83R9T/sYmJn1j3is/chhJdySyhet/JuHnfY="
 	crossorigin="anonymous" />
+	
+	
+	
+	<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+	crossorigin="anonymous"></script>
+	
+	
 <link rel="stylesheet" href="css/star-rating-css.css" />
 
 </head>
@@ -38,15 +52,22 @@
 
 			<div class="card-body">
 				<form action="" method="post">
-					<div class="form-group">
-						<input type="hidden" th:name="${_csrf.parameterName}"
+				
+				<input type="hidden" th:name="${_csrf.parameterName}"
 							th:value="${_csrf.token}" />
+							
+				<input type="hidden" th:name="${review.restaurantId}"
+							th:value="${restaurantList.id}" />
+				
+				
+					<div class="form-group">
+						
 
 
 						<div>
 
 							<label for="text-area">Add A Review:</label>
-							<textarea id="text-area" name="text-area" rows="" cols=""></textarea>
+							<textarea id="text-area" name="text-area" rows="" cols="" th:field="${review.reviewText}"></textarea>
 
 						</div>
 					</div>
