--- a/Restaurantsreview/src/main/resources/templates/dashboard.html
+++ b/Restaurantsreview/src/main/resources/templates/dashboard.html
@@ -22,6 +22,52 @@
       integrity="sha256-x8PYmLKD83R9T/sYmJn1j3is/chhJdySyhet/JuHnfY="
       crossorigin="anonymous"
     />
+   <link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+	integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+	crossorigin="anonymous"></script> 
+    
+    <script type="text/javascript">
+	$(function() {
+
+		$("#addRestaurant").click(function() {
+
+			window.location.href = "/restaurantRegistration";
+			
+		});
+
+	});
+</script>
+
+
+    <script type="text/javascript">
+	$(function() {
+
+		$("#viewRestaurant").click(function() {
+
+			window.location.href = "/restaurantListDisplay";
+			
+		});
+
+	});
+</script>
+
+    <script type="text/javascript">
+	$(function() {
+
+		$("#showUser").click(function() {
+
+			window.location.href = "/userList";
+			
+		});
+
+	});
+</script>
+    
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -209,6 +255,18 @@
                 </div>
               </div>
             </div>
+            
+            <div class="row">
+              
+                
+                <a href="http://localhost:8080/restaurantInfo.html" style="color:#FF0000;"></a>
+              
+                </div>
+                
+                
+            
+            
+            
           </div>
         </main>
       </div>
@@ -247,27 +305,42 @@
 
 
 
-	<!-- 	<form action="/logout" method="post"> -->
-	<!-- 		<input type="hidden" th:name="${_csrf.parameterName}" -->
-	<!-- 			th:value="${_csrf.token}" /> -->
+		<form action="/logout" method="post">
+			<input type="hidden" th:name="${_csrf.parameterName}"
+				th:value="${_csrf.token}" />
 
-	<!-- 		<div class="row"> -->
-	<!-- 			<div class="col-6"> -->
-	<!-- 				<button type="submit" style="padding: 10px" -->
-	<!-- 					class="btn btn-lg btn-info " id="Logout">Logout</button> -->
+			<div class="row">
+				<div class="col-6">
+					<button type="submit" style="padding: 10px"
+						class="btn btn-lg btn-info " id="Logout">Logout</button>
 
-	<!-- 			</div> -->
+				</div>
 
+<div class="d-grid gap-2">
+  <button class="btn btn-primary" type="button" id="addRestaurant">addRestaurant</button>
+  <button class="btn btn-primary" type="button" id="viewRestaurant">viewRestaurant</button>
+  <button class="btn btn-primary" type="button" id="showUser">Registered User List</button>
+  
+  
+</div>
 
+<!-- 			</div> -->
+<!-- 			<div class="col-6" align="right"> -->
+<!-- 				<button type="button" style="padding: 10px" -->
+<!-- 					class="btn btn-lg btn-primary " id="addRestaurant">Add -->
+<!-- 					Restaurant</button> -->
+<!-- 			</div> -->
+			
+			
+			
+			
+<!-- 			<div class="col-6" align="right"> -->
+<!-- 				<button type="button" style="padding: 10px" -->
+<!-- 					class="btn btn-lg btn-primary " id="viewRestaurant">View -->
+<!-- 					Restaurant</button> -->
+<!-- 			</div> -->
+		
 
-	<!-- 		</div> -->
-	<!-- 		<div class="col-6" align="right"> -->
-	<!-- 			<button type="button" style="padding: 10px" -->
-	<!-- 				class="btn btn-lg btn-primary " id="addRestaurant">Add -->
-	<!-- 				Restaurant</button> -->
-	<!-- 		</div> -->
-	<!-- 		</div> -->
-
-	<!-- 	</form> -->
+		</form>
 
 
